fix: styles and close button on mobile

--- a/packages/shared/styles/components/molecules/SfModal.scss
+++ b/packages/shared/styles/components/molecules/SfModal.scss
@@ -33,10 +33,13 @@
       var(--font-family--primary)
     );
   }
-  &__close {
+  &__close.sf-button {
     position: absolute;
     right: var(--modal-close-right, var(--spacer-sm));
-    top: var(--modal-close-top, var(--spacer-sm));
+    top: var(--modal-close-top, var(--spacer-sm));    
+  }
+  & .sf-link {
+    --button-width: auto;
   }
   @include for-desktop {
     --modal-width: 29.375rem;
